Added header/footer components, introduction.html, contract.html

--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -1,10 +1,14 @@
-
 <nav class="footer">
-    <a href = "itis3135/"> Click to go to ITIS3135 Site</a> &nbsp;| &nbsp;  
+    <a href="https://webpages.charlotte.edu/akhlim/">CLT Webpage</a> &nbsp;| &nbsp;  
     <a href = "https://adriankusa.github.io/"> GitHub Home Page</a> &nbsp; | &nbsp;
-    <a href = "https://adriankusa.github.io/itis3135"> GitHub ITIS3135 Course Page</a> &nbsp; | &nbsp;
+    <a href = "https://adriankusa.github.io/itis3135"> GitHub.io</a> &nbsp; | &nbsp;
     <a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a>
 </nav>
 
 <p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a></p>
 <p class ="footer"><a href="../ajkenterprise.com">A JORDAN KHLIM ENTERPRISE© 2025</a></p>
+<script>
+    document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
+    document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+</script>
+
