--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -3,7 +3,6 @@ body {
     background-color: #EBE9E1;
     display: flex;
     flex-direction: column;
-    text-align: center;
     font-family: "Rubik", sans-serif;
     min-height: 100vh;
     margin: 0;
@@ -13,10 +12,12 @@ header {
     background-color: #EFB11D;
     margin: 0;
     padding: 20px 0;
+    text-align: center;
 }
 
 header a {
     color: #EBE9E1;
+    
 }
 
 header nav {
@@ -25,10 +26,21 @@ header nav {
 
 main {
     flex: 1;
+    text-align: center;
 }
 
 main p {
     color: #E43D12;
+}
+
+.contract-text a {
+    color: #EFB11D;
+}
+
+.contract-text {
+    font-size: 40px;
+    margin: auto 50px;
+    padding: 50px;
 }
 
 h1 {
@@ -52,4 +64,33 @@ footer {
     background-color: #EFB11D;
     color: #D6536D;
     padding: 20px 0;
+    text-align: center;
+}
+
+ul {
+    text-align: left;
+    margin: 0;
+    padding-left: 20%;
+    max-width: 60%;
+    color: #E43D12;
+}
+
+ul ul {
+    text-align: left;
+    margin: 0;
+    padding-left: 5%;
+    max-width: 100%;
+}
+
+ul b {
+    color: #E43D12;
+}
+
+ul li {
+    margin: 10px;
+    font-size: 18px;
+}
+
+figcaption {
+    color: #D6536D;
 }
