Starting on Whimsical Company

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,7 +1,9 @@
-<h1> Adrian Khlim's Absolute Koala || ITIS 3135 </h1>
+<h1> Adrian Khlim's Absolute Koala || %title% </h1>
 
 <nav>
     <a href="https://webpages.charlotte.edu/akhlim/">CLT Webpage</a> ✿
-    <a href="introduction.html">Introduction</a>✿
-    <a href="contract.html">Contract</a>
+    <a href="introduction.html">Introduction</a> ✿
+    <a href="contract.html">Contract</a> ✿
+    <a href="/absolutekoala/index.html">Whimsical Company</a> ✿
+    <a href="introduction.html">Forms</a> 
 </nav>
