--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -4,6 +4,6 @@
     <a href="https://webpages.charlotte.edu/akhlim/">CLT Webpage</a> ✿
     <a href="introduction.html">Introduction</a> ✿
     <a href="contract.html">Contract</a> ✿
-    <a href="/absolutekoala/index.html">Whimsical Company</a> ✿
-    <a href="introduction.html">Forms</a> 
+    <a href="absolutekoala/index.html">Whimsical Company</a> ✿
+    <a href="forms.html">Forms</a> 
 </nav>
