Updated Whimsical Company footer and headers

--- a/itis3135/absolutekoala/components/header.html
+++ b/itis3135/absolutekoala/components/header.html
@@ -1,8 +1,8 @@
 <h1>Absolute Koala's Awesome Kendamas</h1>
 
 <nav class="header">
-    <a href="../index.html">Course Page</a>
-    <a href ="index.html">Home</a>
+    <a href="../index.html">Course Page</a> ✿
+    <a href ="index.html">Home</a> ✿
     <a href="about.html">About</a>
 </nav>
 
