--- a/itis3135/absolutekoala/components/footer.html
+++ b/itis3135/absolutekoala/components/footer.html
@@ -1,2 +1,3 @@
+<p class="footer"><a href="about.html">Privacy</a> &nbsp; <a href="about.html">Contact</a></p>
 <p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a></p>
 <p class ="footer"><a href="../ajkenterprise.com">A JORDAN KHLIM ENTERPRISE© 2025</a></p>
