--- a/itis3135/absolutekoala/styles/styles.css
+++ b/itis3135/absolutekoala/styles/styles.css
@@ -51,3 +51,12 @@ header a {
 header a:hover {
     text-decoration: none;
 }
+
+footer a {
+    text-decoration: underline;
+    color: #2218A7;
+    font-size: 110%;
+}
+footer a:hover {
+    text-decoration: none;
+}
