Updated CSS media queries, project overview examples

--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -5,6 +5,6 @@
     <a href="https://www.linkedin.com/in/adriankhlim/"> LinkedIn </a>
 </nav>
 
-<p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a></p>
+<p class="footer">Designed by Adrian Khlim, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/responsive-web-design">Certified in Responsive Web Design</a>, <a href="https://www.freecodecamp.org/certification/adriankhlimuncc/javascript-algorithms-and-data-structures-v8">Certified in JS</a></p>
 <p class ="footer"><a href="../ajkenterprise.com">A JORDAN KHLIM ENTERPRISE© 2025</a></p>
 
