--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -26,8 +26,12 @@ header nav {
 
 main {
     flex: 1;
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
     text-align: center;
 }
+
 
 main p {
     color: #E43D12;
@@ -147,4 +151,47 @@ figcaption {
 
 .form-div button:hover {
     background-color: #d39e1a;
+}
+
+/* for mobile devices/phones */
+@media screen and (max-width: 600px) {
+    body {
+        font-size: 16px;
+        padding: 20px;
+    }
+
+    .course-heading {
+        font-size: 1.4em;
+    }
+
+    main {
+        width: 95%;
+    }
+}
+
+/* for tablets */
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+    body {
+        font-size: 17px;
+        padding: 30px;
+    }
+
+    .course-heading {
+        font-size: 1.8em;
+    }
+
+    main {
+        width: 92%;
+    }
+}
+
+/* for smaller pc screens */
+@media screen and (min-width: 1025px) and (max-width: 1400px) {
+    .course-heading {
+        font-size: 2.2em;
+    }
+
+    main {
+        width: 90%;
+    }
 }
