--- a/itis3135/project/styles/default.css
+++ b/itis3135/project/styles/default.css
@@ -1,4 +1,4 @@
-/* Base Styles */
+/* body */
 body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -9,7 +9,7 @@ body {
     overflow-x: hidden;
 }
 
-/* Header & Navigation */
+/* header and nav */
 header {
     position: sticky;
     top: 0;
@@ -73,13 +73,27 @@ a:hover {
     color: #46dff3;
 }
 
-/* Main Content */
-main {
-    width: 100%;
+html, body {
+    height: 100%;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+/* main and sections */
+main {
+    flex: 1;
+    width: 100%;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 40px;
     padding: 0;
     background-color: #ffffff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    
 }
 
 section {
@@ -88,7 +102,7 @@ section {
     padding-bottom: 25px;
 }
 
-/* Hero Section */
+/* hero section */
 .hero {
     box-sizing: border-box;
     width: 100vw;
@@ -121,7 +135,7 @@ section {
     color: #362a84;
 }
 
-/* Typography */
+/* heading colors */
 h2, h3, h4 {
     color: #362a84;
 }
@@ -150,7 +164,9 @@ h2, h3, h4 {
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12);
 }
 
-
+.cards-section {
+    border-bottom: 0;
+}
 
 .cards-section-h3 {
     text-align: center;
@@ -206,7 +222,7 @@ h2, h3, h4 {
     padding: 10px;
 }
 
-/* Contact p and headings*/
+/* contact p and headings*/
 
 #contact-sec {
     padding: 10px;
@@ -215,7 +231,7 @@ h2, h3, h4 {
     margin-left: 20px;
 }
 
-/* Form */
+/* form */
 .form-div {
     max-width: 500px;
     margin: 0 auto;
@@ -258,7 +274,7 @@ h2, h3, h4 {
     background-color: #2a206d;
 }
 
-/* Footer */
+/* footer */
 footer {
     text-align: center;
     padding: 20px;
@@ -286,7 +302,7 @@ footer {
 
 
 
-/* Media Queries */
+/* media queries */
 @media screen and (max-width: 600px) {
     body {
         font-size: 16px;
