--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -6,6 +6,7 @@
     <a href="contract.html">Contract</a> ✿
     <a href="hobby/index.html">Hobby</a> ✿
     <a href="absolutekoala/index.html">Whimsical Company</a> ✿
+    <a href="ajkenterprise.com/index.html">Design Firm</a> ✿
     <a href="forms.html">Forms</a> ✿
     <a href="drawing.html">Drawing</a> 
 </nav>
