--- a/itis3135/project/components/footer.html
+++ b/itis3135/project/components/footer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" >
 <p>© 2025 RadiateTPS, Bringing Treatment Planning Systems to the Web.</p>
     <div class="footer-icons">
         <a href="https://github.com/adriankUSA/radiateTPS" target="_blank" aria-label="GitHub">
