--- a/itis3135/project/components/header.html
+++ b/itis3135/project/components/header.html
@@ -1,5 +1,5 @@
 
-    <img id="logo" src="images/logocropped2.png">
+    <img id="logo" src="images/logocropped2.png" alt="logo">
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
