--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -4,8 +4,11 @@
     <a href="https://webpages.charlotte.edu/akhlim/">CLT Webpage</a> ✿
     <a href="introduction.html">Introduction</a> ✿
     <a href="contract.html">Contract</a> ✿
+    <a href="stuff/meow WOWOW$$.htm">CRAPPY Website</a> ✿
+    <a href="website_evaluations.html">Website Evaluations</a> ✿
     <a href="hobby/index.html">Hobby</a> ✿
     <a href="absolutekoala/index.html">Whimsical Company</a> ✿
+    <a href="tables.html">HTML Tables</a> ✿
     <a href="ajkenterprise.com/index.html">Design Firm</a> ✿
     <a href="forms.html">Forms</a> ✿
     <a href="drawing.html">Drawing</a> 
