--- a/itis3135/project/styles/default.css
+++ b/itis3135/project/styles/default.css
@@ -153,7 +153,10 @@ h2, h3, h4 {
     background-color: white;
     border: 1px solid #ddd;
     border-radius: 12px;
-    padding: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 4px;
     text-align: left;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.06);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -178,6 +181,7 @@ h2, h3, h4 {
 .card-h4 {
     margin-top: 0;
     color: #362a84;
+    padding-top: 0;
 }
 
 .card p {
