Finished slideshow.html

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -12,5 +12,6 @@
     <a href="ajkenterprise.com/index.html">Design Firm</a> ✿
     <a href="byo_intro.html">BYO Form</a> ✿
     <a href="forms.html">Forms</a> ✿
+    <a href="slideshow.html">Slideshow</a> ✿
     <a href="drawing.html">Drawing</a> 
 </nav>
