--- a/itis3135/project/styles/default.css
+++ b/itis3135/project/styles/default.css
@@ -305,6 +305,13 @@ footer {
     transform: scale(1.2);
 }
 
+/* contact */
+#contact-sec {
+    padding: 10px;
+}
+#contact-main p, .contact-main-h2, .contact-main-h3 {
+    margin-left: 20px;
+}
 
 
 /* media queries */
